Bug 133605 - Incorrect rendering numbering in Word defined multi-level list
Summary: Incorrect rendering numbering in Word defined multi-level list
Status: VERIFIED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: LibreOffice (show other bugs)
Version:
(earliest affected)
unspecified
Hardware: All All
: medium normal
Assignee: Vasily Melenchuk (CIB)
URL:
Whiteboard: target:7.1.0 target:7.0.0.1
Keywords:
Depends on:
Blocks: DOCX-Bullet-Number-Outline-Lists
  Show dependency treegraph
 
Reported: 2020-06-02 14:47 UTC by Marco Caspers
Modified: 2020-06-30 09:14 UTC (History)
5 users (show)

See Also:
Crash report or crash signature:


Attachments
bug_example_doc (21.25 KB, application/vnd.openxmlformats-officedocument.wordprocessingml.document)
2020-06-02 14:47 UTC, Marco Caspers
Details
Screenshot of the document in Word and Writer (185.72 KB, image/png)
2020-06-03 07:52 UTC, NISZ LibreOffice Team
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Marco Caspers 2020-06-02 14:47:38 UTC
Created attachment 161528 [details]
bug_example_doc

Hi there,

I have .docx document that uses a particular numbering, that is attached to predefined styles. I've attached this document. 

As you can see, I use headings at four different levels (1 to 4). They make use of a multi-level list. In this case, the first level omits a number (a deliberate choice by us, and designed like that in Word), but it is used to 'reset' the numbering for level 2. In Word, this completely works as expected. The result is this [screenshot](https://imgur.com/a/Ryu1EDW).

However, when opening in LibreOffice (tried versions between 6.2.8 and newest beta (7.0.0.0beta1), it force the first level to use numbering as well. So the first heading is "1Heading level 1" and the other heading levels use this number in their numbering as well, so level 2 is showing "1.1" instead of "1".

Is there something that can be done to fix this?

Looking forward to your reply! 

Best regards,

Maro Caspers
Comment 1 NISZ LibreOffice Team 2020-06-03 07:52:14 UTC
Created attachment 161558 [details]
Screenshot of the document in Word and Writer
Comment 2 NISZ LibreOffice Team 2020-06-03 07:53:23 UTC
Confirming in 

Version: 7.1.0.0.alpha0+ (x64)
Build ID: 75eeb423196c1e94a0189b7eccff37aed5765853
CPU threads: 4; OS: Windows 6.3 Build 9600; UI render: Skia/Raster; VCL: win
Locale: hu-HU (hu_HU); UI: en-US
Calc: CL
Comment 3 NISZ LibreOffice Team 2020-06-03 08:02:09 UTC
In 6.4.0 the "Heading Level 1" got an extra "1" prefix, not "%2%3".
"Heading Level 2" got 1.1. prefix, not "11."
-> not regression, because it wasn't good in the first place. Just differently bad.
Comment 4 Commit Notification 2020-06-16 10:13:50 UTC
Vasily Melenchuk committed a patch related to this issue.
It has been pushed to "master":

https://git.libreoffice.org/core/commit/408f2a1c09a6563caf193384df8e1cac6e153fbb

tdf#133605: docx import: use ilvl value for list level import

It will be available in 7.1.0.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 5 Commit Notification 2020-06-17 07:22:31 UTC
Vasily Melenchuk committed a patch related to this issue.
It has been pushed to "libreoffice-7-0":

https://git.libreoffice.org/core/commit/c1d695d93125fbbd5999ee7f49a30a3360a90747

tdf#133605: docx import: use ilvl value for list level import

It will be available in 7.0.0.1.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 6 Xisco Faulí 2020-06-30 09:14:37 UTC
Verified in

Version: 7.1.0.0.alpha0+
Build ID: 63f3485b57904de4e77c04f5759e6563fcce6748
CPU threads: 4; OS: Linux 4.19; UI render: default; VCL: gtk3
Locale: en-US (en_US.UTF-8); UI: en-US
Calc: threaded

@Vasily, thanks for fixing this issue!!